# foxit-pdf-api-mcp-server

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
python/foxit-pdf-api-mcp-server/: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
python/foxit-pdf-api-mcp-server/src/foxit_pdf_api_mcp_server/: __init__.py  __version__.py  config.py  main.py  resources.py  server.py
python/foxit-pdf-api-mcp-server/src/foxit_pdf_api_mcp_server/client/: __init__.py  foxit_client.py
python/foxit-pdf-api-mcp-server/src/foxit_pdf_api_mcp_server/tools/: POLICY.md  __init__.py  _base.py  document_lifecycle.py  pdf_analysis.py  pdf_conversion.py  pdf_creation.py  pdf_forms.py  pdf_manipulation.py  pdf_properties.py  pdf_security.py  pdf_widget.py  share_link_helper.py  task_status.py
python/foxit-pdf-api-mcp-server/src/foxit_pdf_api_mcp_server/types/: __init__.py  api.py
python/foxit-pdf-api-mcp-server/src/foxit_pdf_api_mcp_server/utils/: __init__.py  task_poller.py
python/foxit-pdf-api-mcp-server/tests/: README.md
python/foxit-pdf-api-mcp-server/tests/e2e/: conftest.py  test_pdf_conversion_e2e.py  test_pdf_creation_e2e.py  test_pdf_manipulation_e2e.py  test_pdf_properties_e2e.py  test_pdf_security_e2e.py
python/foxit-pdf-api-mcp-server/tests/fixtures/: sample.docx  sample.html  sample.pptx  sample.txt  sample.xlsx
python/foxit-pdf-api-mcp-server/tests/mcp/: conftest.py  test_error_handling.py  test_protocol_routing.py  test_tool_annotations.py  test_tool_discovery.py
python/foxit-pdf-api-mcp-server/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
python/foxit-pdf-api-mcp-server/web/src/: main.ts
python/foxit-pdf-api-mcp-server/web/src/components/: FileUpload.vue  (+1 more)
(+69 files in other folders)
